fixed scrolling issue on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -4,6 +4,21 @@
   box-sizing: border-box;
 }
 
+/* fix scroll issue on mobile */
+::-webkit-scrollbar{
+
+  -webkit-appearance: none;
+  width: 7px;
+
+}
+
+::-webkit-scrollbar-thumb {
+
+  border-radius: 4px;
+  background-color: rgba(0,0,0,.5); 
+  -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
+}
+
 /* This is for fade-in animation when loading page */
 body{
   -webkit-animation: fadein 3s; /* Safari, Chrome and Opera > 12.1 */
